<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="3dp"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardElevation="2dp"
    card_view:contentPadding="5dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_single_srno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="TextView" />

            <EditText
                android:id="@+id/et_single_obs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:hint="@string/observation"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_single_add"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_margin="2dp"
                android:background="@drawable/button_bg"
                android:padding="4dp"
                android:text="@string/upload_photo"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_delete_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_margin="3dp"
                android:background="@null"
                android:visibility="gone"
                android:tint="@android:color/holo_red_light"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/img" />
        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>