<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp"
    android:background="@color/browser_actions_text_color">

    <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="17sp"/>
    <LinearLayout
        android:orientation="horizontal"
         android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
             android:layout_weight="1"
            android:layout_gravity="center"
                android:gravity="center"
            android:id="@+id/ll_camera"
            android:layout_margin="@dimen/h4">
            <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_photo_camera"
                    android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                    android:text="@string/choose_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:layout_weight="1"
             android:layout_gravity="center"
                android:gravity="center"
            android:id="@+id/ll_doccument"
            android:layout_margin="@dimen/h4">
            <ImageView
                    android:id="@+id/img_camera1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_image"
                    android:layout_marginStart="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/app_name"/>
            <TextView
                    android:text="@string/doccuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:id="@+id/textView2"
                 android:layout_margin="4dp"
                    android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>